--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -180,6 +180,8 @@ spec:
                 shutdown:
                   type: boolean
               type: object
+            onInit:
+              type: boolean
             selector:
               additionalProperties:
                 type: string
