--- a/examples/count_percentage.yaml
+++ b/examples/count_percentage.yaml
@@ -7,7 +7,7 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: count-percentage
-  namespace: chaos-engineering
+  namespace: chaos-demo
 spec:
   level: pod
   selector:
