--- a/examples/disk_pressure_read.yaml
+++ b/examples/disk_pressure_read.yaml
@@ -7,7 +7,7 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: disk-pressure-read
-  namespace: chaos-engineering
+  namespace: chaos-demo
 spec:
   level: pod
   selector:
