--- a/examples/dry_run.yaml
+++ b/examples/dry_run.yaml
@@ -7,7 +7,7 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: dry-run
-  namespace: chaos-engineering
+  namespace: chaos-demo
 spec:
   dryRun: true # enable dry-run mode (chaos pods will be created but won't inject anything)
   level: pod
