--- a/examples/level_node.yaml
+++ b/examples/level_node.yaml
@@ -7,7 +7,7 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: level-node
-  namespace: chaos-engineering
+  namespace: chaos-demo
 spec:
   level: node # impact the whole node instead of a single pod
   selector:
