--- a/examples/network_bandwidth_limitation.yaml
+++ b/examples/network_bandwidth_limitation.yaml
@@ -7,7 +7,7 @@ apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
   name: network-bandwidth-limitation
-  namespace: chaos-engineering
+  namespace: chaos-demo
 spec:
   level: pod
   selector:
