--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -5,6 +5,13 @@
 
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: chaos-demo
+  labels:
+    name: chaos-demo
+---
+apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: demo
