--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -23,6 +23,6 @@ metadata:
 spec:
   ports:
   - port: 443
-    targetPort: 9443
+    targetPort: {{ .Values.controller.webhook.port }}
   selector:
     app: chaos-controller
