Try md-link-linter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,6 @@ commands:
       - run:
           name: Install git
           command: apk update && apk add git
-  npm_install_markdownlint:
-    description: "Install markdownlint using npm"
-    steps:
-      - run:
-          name: Install markdownlint
-          command: npm install markdownlint-cli2
 
 templates:
   # sets the working directory to the project path
@@ -61,9 +55,6 @@ executors:
     <<: *working_directory
     docker:
       - image: python:3.8.1-alpine3.10
-  npm:
-    docker:
-      - image: cimg/node:16.3.0
   bash:
     <<: *working_directory
     docker:
@@ -141,13 +132,12 @@ jobs:
     steps:
       - go_restore_cache
       - run: make lint
-  # runs the markdownlint-cli2 on all docs
+  # runs the md-lint-linter on all docs
   mdlint:
-    executor: npm
+    executor: bash
     steps:
       - checkout
-      - npm_install_markdownlint
-      - run: node_modules/markdownlint-cli2/markdownlint-cli2.js docs/*md
+      - run: docker run -t --rm norberttech/md-link-linter --exclude=vendor --exclude=node_modules .
   # runs the tests
   test:
     executor: golang
