--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -25,4 +25,5 @@ injector:
   serviceAccountNamespace: chaos-engineering # namespace where the service account can be found (NOTE: changing this will change the namespace in which the chaos pods are created)
 
 handler:
+  enabled: true # enable the chaos handler (required to use the onInit disruption feature)
   timeout: 1m # time the handler init container will wait before exiting if no signal is received
