--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -14,6 +14,7 @@ controller:
   deleteOnly: false # enable delete-only mode
   metricsSink: noop # metrics driver (noop or datadog)
   webhook: # admission webhook configuration
+    generateCert: false # if you want Helm to generate certificates (e.g. in case the cert-manager is not installed in the cluster) set this to true
     certDir: "" # certificate directory (must contain tls.crt and tls.key files)
     host: "" # host to use to serve requests
     port: 9443 # port to use to serve requests
