--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -25,6 +25,10 @@ spec:
       - host: 10.0.0.0/8 # optional, IP, CIDR or hostname to filter on
         port: 80 # optional, port to drop packets on
         protocol: tcp # optional, protocol to drop packets on (can be tcp or udp, defaults to both)
+    allowedHosts: # optional, list of excluded hosts which would not be disrupted
+      - host: 10.0.0.1 # optional, IP, CIDR or hostname to filter on
+        port: 80 # optional, port to filter on
+        protocol: tcp # optional, protocol to filter on (can be tcp or udp, defaults to both)
     services: # optional, list of destination Kubernetes services to filter on
       - name: foo # service name
         namespace: bar # service namespace
