--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -75,6 +75,37 @@ webhooks:
     resources:
     - pods
 ---
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: MutatingWebhookConfiguration
+metadata:
+  annotations:
+  {{- if not .Values.controller.webhook.generateCert }}
+    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+  {{- end }}
+  name: chaos-controller-disruption-user-info
+webhooks:
+- clientConfig:
+  {{- if not .Values.controller.webhook.generateCert }}
+    caBundle: Cg==
+  {{- else }}
+    caBundle: {{ b64enc $ca.Cert }}
+  {{- end }}
+    service:
+      name: chaos-controller-webhook-service
+      namespace: chaos-engineering
+      path: /mutate-chaos-datadoghq-com-v1beta1-disruption-user-info
+  failurePolicy: Fail
+  name: chaos-controller-admission-webhook.chaos-engineering.svc
+  rules:
+  - apiGroups:
+    - "chaos.datadoghq.com"
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    resources:
+    - disruptions
+---
 {{- if not .Values.controller.webhook.generateCert }}
 apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
