--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -20,8 +20,8 @@ spec:
   count: 1 # number of pods to target or a percentage (1% - 100%)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # optional, shutdown the host instead of triggering a stack dump (defaults to false)
-  podFailure: # interrupting or killing a pod's containers
-    kill: true # optional, kill the pod's containers by sending the SIGKILL signal (defaults to false)
+  podFailure: # terminating a pod's containers gracefully or non-gracefully
+    forced: true # optional, terminate the pod's containers non-gracefully (SIGKILL) (defaults to false)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
     hosts: # optional, list of destination hosts to filter on
       - host: 10.0.0.0/8 # optional, IP, CIDR or hostname to filter on
