--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -186,7 +186,7 @@ spec:
               description: PodFailureSpec represents a pod failure injection
               nullable: true
               properties:
-                kill:
+                forced:
                   type: boolean
               type: object
             selector:
