--- a/examples/container_failure_forced.yaml
+++ b/examples/container_failure_forced.yaml
@@ -6,7 +6,7 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: container-failure-kill
+  name: container-failure-forced
   namespace: chaos-demo
 spec:
   selector:
@@ -15,4 +15,4 @@ spec:
     - dummy
   count: 1
   podFailure:
-    kill: true # send a SIGKILL signal to the pod's containers
+    forced: true # send a SIGKILL signal to the specified containers
