--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -20,7 +20,7 @@ spec:
   count: 1 # number of pods to target or a percentage (1% - 100%)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # optional, shutdown the host instead of triggering a stack dump (defaults to false)
-  podFailure: # terminating a pod's containers gracefully or non-gracefully
+  containerFailure: # terminating a pod's containers gracefully or non-gracefully
     forced: true # optional, terminate the pod's containers non-gracefully (SIGKILL) (defaults to false)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
     hosts: # optional, list of destination hosts to filter on
