Fixes CLI issues

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -124,11 +124,11 @@ spec:
                     properties:
                       http:
                         items:
-                          type: integer
+                          type: string
                         type: array
                       https:
                         items:
-                          type: integer
+                          type: string
                         type: array
                     required:
                     - http
