--- a/examples/http.yaml
+++ b/examples/http.yaml
@@ -21,5 +21,5 @@ spec:
         - method: PUT
           uri: /
       ports:
-        http: [8000,8080]
-        https: [8443,9443]
+        http: ["8000","8080"]
+        https: ["8443","9443", "8888"]
