--- a/examples/container_failure_all_graceful.yaml
+++ b/examples/container_failure_all_graceful.yaml
@@ -13,4 +13,4 @@ spec:
     app: demo-curl
   count: 1
   containerFailure:
-    forced: false # send a SIGTERM signal to the pod's containers
+    forced: false # send a SIGTERM signal to all of the pod's containers
