--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -27,6 +27,39 @@ metadata:
   name: chaos-injector
   namespace: chaos-engineering
 ---
+# Source: chaos-controller/templates/configmap.yaml
+# Unless explicitly stated otherwise all files in this repository are licensed
+# under the Apache License Version 2.0.
+# This product includes software developed at Datadog (https://www.datadoghq.com/).
+# Copyright 2021 Datadog, Inc.
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: chaos-controller-config
+  namespace: chaos-engineering
+data:
+  config.yaml: |
+    controller:
+      metricsAddr: "127.0.0.1:8080"
+      leaderElection: true
+      metricsSink: "noop"
+      deleteOnly: false
+      imagePullSecrets: false
+      webhook:
+        certDir: ""
+        host: ""
+        port: 9443
+    injector:
+      image: "datadog/chaos-injector"
+      serviceAccount:
+        name: "chaos-injector"
+        namespace: "chaos-engineering"
+    handler:
+      enabled: true
+      image: "docker.io/library/chaos-handler"
+      timeout: "1m"
+---
 # Source: chaos-controller/templates/crds/chaos.datadoghq.com_disruptions.yaml
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -136,6 +169,24 @@ spec:
               description: NetworkDisruptionSpec represents a network disruption injection
               nullable: true
               properties:
+                allowedHosts:
+                  items:
+                    properties:
+                      host:
+                        type: string
+                      port:
+                        maximum: 65535
+                        minimum: 0
+                        type: integer
+                      protocol:
+                        enum:
+                        - tcp
+                        - udp
+                        - ""
+                        type: string
+                    type: object
+                  nullable: true
+                  type: array
                 bandwidthLimit:
                   minimum: 0
                   type: integer
@@ -244,6 +295,34 @@ spec:
                 type: string
               nullable: true
               type: array
+            userInfo:
+              description: UserInfo holds the information about the user needed to
+                implement the user.Info interface.
+              nullable: true
+              properties:
+                extra:
+                  additionalProperties:
+                    description: ExtraValue masks the value so protobuf can generate
+                    items:
+                      type: string
+                    type: array
+                  description: Any additional information provided by the authenticator.
+                  type: object
+                groups:
+                  description: The names of groups this user is a part of.
+                  items:
+                    type: string
+                  type: array
+                uid:
+                  description: A unique value that identifies this user across time.
+                    If this user is deleted and another user by the same name is added,
+                    they will have different UIDs.
+                  type: string
+                username:
+                  description: The name that uniquely identifies this user among all
+                    active users.
+                  type: string
+              type: object
           type: object
       type: object
   version: v1beta1
@@ -538,22 +617,12 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        image: datadog/chaos-controller:4.1.1
+        image: datadog/chaos-controller:4.2.0
         imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/manager
         args:
-        - --metrics-addr=127.0.0.1:8080
-        - --enable-leader-election
-        - --metrics-sink=noop
-        - --injector-image=datadog/chaos-injector:4.1.1
-        - --handler-image=docker.io/library/chaos-handler:4.1.1
-        - --handler-timeout=1m
-        - --injector-service-account=chaos-injector
-        - --injector-service-account-namespace=chaos-engineering
-        - --admission-webhook-cert-dir=
-        - --admission-webhook-host=
-        - --admission-webhook-port=9443
+        - --config=/etc/chaos-controller/config.yaml
         ports:
         - containerPort: 9443
           name: webhook-server
@@ -569,18 +638,26 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: cert
           readOnly: true
+        - mountPath: /etc/chaos-controller
+          name: config
+          readOnly: true
       terminationGracePeriodSeconds: 10
       volumes:
       - name: cert
         secret:
           defaultMode: 420
           secretName: chaos-controller-webhook-secret
+      - name: config
+        configMap:
+          name: chaos-controller-config
 ---
 # Source: chaos-controller/templates/webhook.yaml
 # Unless explicitly stated otherwise all files in this repository are licensed
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
+---
+# Source: chaos-controller/templates/webhook.yaml
 apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
@@ -588,8 +665,8 @@ metadata:
   namespace: chaos-engineering
 spec:
   dnsNames:
-  - chaos-controller-webhook-service.chaos-engineering.svc
-  - chaos-controller-webhook-service.chaos-engineering.svc.cluster.local
+    - chaos-controller-webhook-service.chaos-engineering.svc
+    - chaos-controller-webhook-service.chaos-engineering.svc.cluster.local
   issuerRef:
     kind: Issuer
     name: chaos-controller-selfsigned-issuer
@@ -635,10 +712,32 @@ webhooks:
     - pods
 ---
 # Source: chaos-controller/templates/webhook.yaml
-# Unless explicitly stated otherwise all files in this repository are licensed
-# under the Apache License Version 2.0.
-# This product includes software developed at Datadog (https://www.datadoghq.com/).
-# Copyright 2021 Datadog, Inc.
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: MutatingWebhookConfiguration
+metadata:
+  annotations:
+    cert-manager.io/inject-ca-from: chaos-engineering/chaos-controller-serving-cert
+  name: chaos-controller-disruption-user-info
+webhooks:
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: chaos-controller-webhook-service
+      namespace: chaos-engineering
+      path: /mutate-chaos-datadoghq-com-v1beta1-disruption-user-info
+  failurePolicy: Fail
+  name: chaos-controller-admission-webhook.chaos-engineering.svc
+  rules:
+  - apiGroups:
+    - "chaos.datadoghq.com"
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    resources:
+    - disruptions
+---
+# Source: chaos-controller/templates/webhook.yaml
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -653,7 +752,7 @@ webhooks:
       namespace: chaos-engineering
       path: /validate-chaos-datadoghq-com-v1beta1-disruption
   failurePolicy: Fail
-  name: chaos-controller-admission-webhook.chaos-engineering.svc
+  name: chaos-controller-webhook-service.chaos-engineering.svc
   rules:
   - apiGroups:
     - chaos.datadoghq.com
