--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -292,6 +292,13 @@ spec:
                 shutdown:
                   type: boolean
               type: object
+            containerFailure:
+              description: ContainerFailureSpec represents a container failure injection
+              nullable: true
+              properties:
+                forced:
+                  type: boolean
+              type: object
             onInit:
               type: boolean
             selector:
