--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 bin/injector/injector
 bin/manager/manager
 bin/handler/handler
+bin/chaosli/chaosli.tar.gz
+bin/chaosli/chaosli_darwin_amd64
+bin/chaosli/chaosli_darwin_amd64.sha256sum
 out
 dist
 
@@ -30,8 +33,8 @@ dist
 # other
 .venv
 
-#output of chaosli create
-disruption.yaml 
+# output of chaosli create
+disruption.yaml
 
 # packer
 packer_cache/
