--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,7 +161,7 @@ release-docker-hub-ref:
 
 release-docker-hub-tag:
   <<: *release-docker-hub
-  when: manual
+  when: always
   only:
     - tags
   variables:
