--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -132,6 +132,10 @@ spec:
             level:
               description: DisruptionLevel represents which level the disruption should
                 be injected at
+              enum:
+              - pod
+              - node
+              - ""
               type: string
             network:
               description: NetworkDisruptionSpec represents a network disruption injection
@@ -143,25 +147,45 @@ spec:
                       host:
                         type: string
                       port:
+                        maximum: 65535
+                        minimum: 0
                         type: integer
                       protocol:
+                        enum:
+                        - tcp
+                        - udp
+                        - ""
                         type: string
                     type: object
                   nullable: true
                   type: array
                 bandwidthLimit:
+                  minimum: 0
                   type: integer
                 corrupt:
+                  maximum: 100
+                  minimum: 0
                   type: integer
                 delay:
+                  maximum: 59999
+                  minimum: 0
                   type: integer
                 delayJitter:
+                  maximum: 100
+                  minimum: 0
                   type: integer
                 drop:
+                  maximum: 100
+                  minimum: 0
                   type: integer
                 duplicate:
+                  maximum: 100
+                  minimum: 0
                   type: integer
                 flow:
+                  enum:
+                  - ingress
+                  - egress
                   type: string
                 hosts:
                   items:
@@ -169,13 +193,21 @@ spec:
                       host:
                         type: string
                       port:
+                        maximum: 65535
+                        minimum: 0
                         type: integer
                       protocol:
+                        enum:
+                        - tcp
+                        - udp
+                        - ""
                         type: string
                     type: object
                   nullable: true
                   type: array
                 port:
+                  maximum: 65535
+                  minimum: 0
                   nullable: true
                   type: integer
                 services:
