--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -51,13 +51,13 @@ data:
         host: ""
         port: 9443
     injector:
-      image: "datadog/chaos-injector:4.2.1"
+      image: "datadog/chaos-injector:4.3.0"
       serviceAccount:
         name: "chaos-injector"
         namespace: "chaos-engineering"
     handler:
       enabled: true
-      image: "datadog/chaos-handler:4.2.1"
+      image: "datadog/chaos-handler:4.3.0"
       timeout: "1m"
 ---
 # Source: chaos-controller/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -228,7 +228,7 @@ spec:
                   minimum: 0
                   type: integer
                 delay:
-                  maximum: 59999
+                  maximum: 60000
                   minimum: 0
                   type: integer
                 delayJitter:
@@ -650,7 +650,7 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        image: datadog/chaos-controller:4.2.1
+        image: datadog/chaos-controller:4.3.0
         imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/manager
@@ -794,5 +794,6 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
+    - DELETE
     resources:
     - disruptions
