--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,12 @@ jobs:
             sudo chown circleci:circleci /go /usr/local/bin /usr/local/kubebuilder
       - go_restore_cache
       - run:
+          name: Edit controller chart
+          <<: *working_directory
+          command: |
+            sudo snap install yq
+            yq e '.controller.expiredDisruptionGCDelay = "3s"' -i chart/values.yaml
+      - run:
           name: Configure Minikube
           command: |
             curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube_latest_amd64.deb
