--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -129,10 +129,7 @@ spec:
               type: array
             dryRun:
               type: boolean
-            duration:
-              description: A Duration represents the elapsed time between two instants
-                as an int64 nanosecond count. The representation limits the largest
-                representable duration to approximately 290 years.
+            durationSeconds:
               format: int64
               type: integer
             level:
