--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -35,6 +35,9 @@ data:
       serviceAccount:
         name: {{ .Values.injector.serviceAccount | quote }}
         namespace: {{ .Values.injector.serviceAccountNamespace | quote }}
+      dnsDisruption:
+        dnsServer: {{ .Values.injector.dnsDisruption.dnsServer }}
+        kubeDns: {{ .Values.injector.dnsDisruption.kubeDns }}
       {{- if .Values.injector.networkDisruption.allowedHosts }}
       networkDisruption:
         allowedHosts:
