--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,6 +196,19 @@ jobs:
       - run:
           name: Ensure license header is present
           command: inv header-check
+  # ensures that the grpc protobuf files genereated by disruption_listener.proto are up to date
+  protobuf:
+    executor: golang
+    steps:
+      - checkout
+      - run:
+        command: |
+          cd grpc/disruption_listener
+          apt install -y protobuf-compiler
+          go get google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go get google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative disruption_listener.proto
+      - run: git diff --exit-code
 
 workflows:
   version: 2
