--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,7 +205,7 @@ jobs:
           command: |
             cd grpc/disruption_listener
             apt-get update
-            apt-get upgrade
+            apt-get upgrade -y
             apt-get install unzip -y
             PROTOC_ZIP=protoc-3.14.0-linux-x86_64.zip
             curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/$PROTOC_ZIP
