Quote values in ConfigMap.

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -36,8 +36,8 @@ data:
         name: {{ .Values.injector.serviceAccount | quote }}
         namespace: {{ .Values.injector.serviceAccountNamespace | quote }}
       dnsDisruption:
-        dnsServer: {{ .Values.injector.dnsDisruption.dnsServer }}
-        kubeDns: {{ .Values.injector.dnsDisruption.kubeDns }}
+        dnsServer: {{ .Values.injector.dnsDisruption.dnsServer | quote }}
+        kubeDns: {{ .Values.injector.dnsDisruption.kubeDns | quote }}
       {{- if .Values.injector.networkDisruption.allowedHosts }}
       networkDisruption:
         allowedHosts:
