Make DNS spoofing compatible with kube-dns and different setups (#405)
* Draft for DNS resolution fix.

* Update exposed values to use kubee-dns mode resolution.

* Quote values in ConfigMap.

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -35,6 +35,9 @@ data:
       serviceAccount:
         name: {{ .Values.injector.serviceAccount | quote }}
         namespace: {{ .Values.injector.serviceAccountNamespace | quote }}
+      dnsDisruption:
+        dnsServer: {{ .Values.injector.dnsDisruption.dnsServer | quote }}
+        kubeDns: {{ .Values.injector.dnsDisruption.kubeDns | quote }}
       {{- if .Values.injector.networkDisruption.allowedHosts }}
       networkDisruption:
         allowedHosts:
